--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,17 +15,34 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FinanceAI"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.FinanceAI">
+
+            <!-- Launcher intent -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <!-- Deep link intent -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Maildeki linkle eşleşecek scheme ve host -->
+                <data
+                    android:scheme="financeai"
+                    android:host="resetPassword"
+                    tools:ignore="AppLinkUrlError" />
+            </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
