--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
+    <!-- İzinler -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:allowBackup="true"
@@ -20,7 +22,6 @@
         android:theme="@style/Theme.FinanceAI"
         tools:targetApi="31">
 
-        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -41,8 +42,28 @@
                     android:host="resetPassword"
                     tools:ignore="AppLinkUrlError" />
             </intent-filter>
-
         </activity>
+
+        <!-- BroadcastReceiver: exported=false olmalı (güvenlik) -->
+        <receiver
+            android:name=".worker.NotificationActionReceiver"
+            android:exported="false"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.ahmetkaragunlu.financeai.ACTION_CONFIRM" />
+                <action android:name="com.ahmetkaragunlu.financeai.ACTION_CANCEL" />
+            </intent-filter>
+        </receiver>
+
+        <!-- WorkManager InitializationProvider: node="remove" olmalı -->
+        <!-- Çünkü Configuration.Provider ile manuel initialize ediyoruz -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="remove">
+            <!-- Meta-data kaldırıldı çünkü manuel initialize ediyoruz -->
+        </provider>
 
     </application>
 
