--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:name=".di.financeapplication.FinanceApplication"
+        android:name=".di.application.FinanceApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -62,7 +62,7 @@
         </activity>
 
         <receiver
-            android:name=".worker.NotificationActionReceiver"
+            android:name=".notification.NotificationActionReceiver"
             android:exported="false"
             android:enabled="true">
             <intent-filter>
